include a fix for overflow of words

--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,7 @@
       min-width: 300px;
 
       color: lightskyblue;
+      overflow-wrap: break-word;
     }
     .postedTopic{
       width: 20%;
@@ -142,6 +143,8 @@
       padding: 10px;
       box-sizing: border-box;
       min-width: 300px;
+
+      overflow-wrap: break-word;
     }
 
 .helpBar{
